Fix paper height ish on mobile 3.

--- a/src/styles/_Paper.scss
+++ b/src/styles/_Paper.scss
@@ -6,19 +6,16 @@
   width: 35rem;
   margin: 2.5vh auto;
   max-width: 100%;
-  max-height: 95vh;
   overflow-x: hidden;
   position: relative;
   border-radius: 1.75rem;
-  padding: 0.5rem;
   background-color: white;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
 
   header {
     height: 6rem;
-    margin-top: -0.5rem;
     overflow: hidden;
-    padding: 0;
+    padding: 0.5rem;
   }
 
   h1 {
@@ -26,7 +23,6 @@
     color: $theme-primary-v4;
     border-radius: 1.35rem 1.35rem 0.2rem 0.2rem;
     text-align: center;
-    margin-top: 0.5rem;
     width: auto;
     padding: 0.25rem 0.4rem;
     background-color: rgba($prim-r, $prim-g, $prim-b, 0.2);
@@ -38,10 +34,9 @@
   position: relative;
   overflow-y: auto;
   background: inherit;
-  max-height: calc(100% - 8.75rem);
+  max-height: calc(100% - 9.75rem);
   height: 100%;
   width: calc(100% + 2rem);
-  margin: 0 -1rem;
   border-top: 0.0625rem solid $theme-primary-v7;
   border-bottom: 0.0625rem solid $theme-primary-v7;
 }
@@ -62,21 +57,19 @@
   background-position: 2rem 0, 2.2rem 0, 0 3.95rem;
 }
 
-.footer {
+footer.footer {
   // @include debugger();
   height: 3.75rem;
-  margin: 0 -0.75rem -0.75rem;
-  width: calc(100% + 2.5rem);
-  padding-bottom: 0.5rem;
+  padding: 0.25rem 0.25rem !important;
 }
 
 button.record {
   background-color: $theme-primary;
   color: white;
   box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.2);
-  position: sticky;
-  top: 100%;
-  left: calc(100% - 3rem);
+  position: relative;
+  bottom: 0;
+  left: calc(100% - 3.25rem);
 
   &:hover,
   &:focus {
