--- a/src/styles/misc.scss
+++ b/src/styles/misc.scss
@@ -47,14 +47,11 @@ body {
 }
 
 #root {
-  height: auto;
-  width: 100%;
-  min-height: 100vh;
   display: flex;
-  overflow: hidden;
 
   > div {
     width: 100%;
+    height: 100%;
   }
 }
 
